--- a/style.css
+++ b/style.css
@@ -10,14 +10,17 @@ input {
   font-family: inherit;
   border: none;
 }
+
 button {
   border: none;
   background-color: initial;
   outline: none;
 }
+
 ul {
   list-style: none;
 }
+
 a {
   color: inherit;
   text-decoration: none;
@@ -29,10 +32,8 @@ a {
   color: #fff;
   display: flex;
   justify-content: center;
-  background-image: url(https://bytegrad.com/course-assets/css/2/pattern.svg),
-    linear-gradient(to bottom right, #8fd862, #2cc695 90%);
+  background-image: url(https://bytegrad.com/course-assets/css/2/pattern.svg), linear-gradient(to bottom right, #8fd862, #2cc695 90%);
 }
-
 .page::-webkit-scrollbar {
   display: none;
 }
@@ -49,15 +50,17 @@ a {
 }
 
 .header {
-  grid-column: 1 / 3;
-  grid-row: 1 / 2;
+  grid-column: 1/3;
+  grid-row: 1/2;
   display: flex;
   align-items: center;
 }
+
 .logo {
   margin-left: 26px;
   margin-right: 48px;
 }
+
 .search {
   position: relative;
 }
@@ -87,10 +90,8 @@ a {
   right: 13px;
   top: 8px;
 }
-.search__input:focus {
+.search__submit:focus {
   color: #555a5b;
-}
-.search__icon {
 }
 .nav {
   margin-left: auto;
@@ -98,15 +99,12 @@ a {
 .nav__list {
   display: flex;
 }
-.nav_item {
-}
 .nav__link {
   padding: 0px 20px;
   transition: all 0.2s;
   display: block;
 }
-.nav__link:hover,
-.nav__link:focus {
+.nav__link:hover, .nav__link:focus {
   background-color: #eef3f4;
 }
 .nav__icon {
@@ -117,14 +115,16 @@ a {
 
 .sidebar {
   background-color: #11271f;
-  grid-column: 1 /2;
-  grid-row: 2 / 4;
+  grid-column: 1/2;
+  grid-row: 2/4;
 }
+
 .gallery {
   background-color: #eef3f4;
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-column: 2/3;
+  grid-row: 2/3;
 }
+
 .steps {
   background-color: #e7edee;
 }
