--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,7 @@
 $color-gray-light: #eef3f4;
 $color-gray-medium: #a9b4b7;
 $color-gray-dark: #555a5b;
+$color-accent: #2cc695;
 $ts: all 0.2s;
 
 *,
@@ -26,6 +27,22 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.u-italic {
+  font-style: italic;
+}
+.u-accent {
+  color: $color-accent;
+}
+.u-underline {
+  text-decoration: underline;
+}
+.u-bold {
+  font-weight: 500;
+}
+.u-bolder {
+  font-weight: 700;
 }
 
 .page {
@@ -124,6 +141,139 @@ a {
   background-color: #11271f;
   grid-column: 1 /2;
   grid-row: 2 / 4;
+}
+.intro {
+  padding: 48px 35px 45px;
+  border-bottom: 1px solid rgba(#fff, 0.1);
+  &__text {
+    color: $color-gray-light;
+    font-size: 16px;
+    margin-top: 12px;
+    line-height: 1.8;
+  }
+}
+.first-heading {
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 34px;
+  line-height: 1;
+}
+.social {
+  display: flex;
+  margin: 25px 0 30px;
+  justify-content: center;
+
+  &__img {
+    height: 35px;
+    width: 35px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    &:not(:first-child) {
+      margin-left: -8px;
+    }
+  }
+  &__container {
+    margin-left: 10px;
+  }
+  &__number {
+    font-weight: 500;
+  }
+  &__text {
+    font-size: 12px;
+    color: $color-gray-medium;
+    margin-top: -5px;
+  }
+}
+.auth {
+  &__text {
+    color: $color-gray-medium;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 8px;
+  }
+  &__link {
+    font-weight: 500;
+    color: $color-accent;
+  }
+}
+.btn {
+  background-color: #16b47f;
+  padding: 12px 0px;
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  transition: $ts;
+  &:hover,
+  &:focus {
+    background-color: #119267;
+  }
+  &__icon {
+    margin-left: 2px;
+  }
+}
+
+.upload {
+  padding: 45px 35px;
+  border-bottom: 1px solid rgba(#fff, 0.1);
+  color: $color-gray-medium;
+  &__container {
+    background-color: rgba(#fff, 0.03);
+    height: 330px;
+    border-radius: 3px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: $ts;
+    position: relative;
+    overflow: hidden;
+    &:hover {
+      background-color: rgba(#fff, 0.06);
+    }
+    &::before {
+      content: "";
+      border: 2px dashed #434747;
+      position: absolute;
+      top: -1px;
+      bottom: -1px;
+      left: -1px;
+      right: -1px;
+    }
+    // border: 1px dashed red;
+  }
+  &__icon {
+    font-size: 23px;
+  }
+  &__text {
+    color: #fff;
+    margin-top: 8px;
+  }
+  &__alternative {
+    font-size: 12px;
+    margin-top: -2px;
+  }
+}
+
+.footer {
+  padding: 50px;
+  padding-left: 35px;
+  font-size: 11px;
+  color: rgba($color-gray-medium, 0.6);
+  &__list {
+    display: flex;
+    column-gap: 15px;
+    margin-top: 10px;
+  }
+  &__item {
+  }
+  &__link {
+  }
+}
+.copyright {
+  font-size: inherit;
 }
 .gallery {
   background-color: $color-gray-light;
