--- a/main.scss
+++ b/main.scss
@@ -67,6 +67,9 @@ a {
   &::-webkit-scrollbar {
     display: none;
   }
+  // @media (max-width: 1300px) {
+  //   background-image: none;
+  // }
 }
 
 .app {
@@ -78,6 +81,14 @@ a {
   display: grid;
   grid-template-columns: 355px 1fr;
   grid-template-rows: 65px 724px 1fr;
+  @media (max-width: 1300px) {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  @media (max-width: 355px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .header {
@@ -92,6 +103,9 @@ a {
 }
 .search {
   position: relative;
+  @media (max-width: 815px) {
+    display: none;
+  }
   &__input {
     background-color: $color-gray-light;
     height: 34px;
@@ -152,6 +166,9 @@ a {
   background-color: #11271f;
   grid-column: 1 /2;
   grid-row: 2 / 4;
+  @media (max-width: 580px) {
+    grid-column: 1/-1;
+  }
 }
 .intro {
   padding: 48px 35px 45px;
@@ -168,6 +185,9 @@ a {
   text-transform: uppercase;
   font-size: 34px;
   line-height: 1;
+  @media (max-width: 355px) {
+    font-size: 31px;
+  }
 }
 .social {
   display: flex;
@@ -298,6 +318,19 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 272px 60px 90px 64px 30px 208px;
+  @media (max-width: 1130px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 815px) {
+    grid-row: 2 / 4;
+    grid-template-rows: 272px 60px 90px 64px 30px 1fr;
+    grid-template-columns: 1fr;
+  }
+  @media (max-width: 580px) {
+    display: none;
+  }
+
   &__img-wrapper {
     position: relative;
 
@@ -310,11 +343,17 @@ a {
       grid-column: 2 /3;
       grid-row: 1 /4;
       animation: fade-in 1s 0.2s backwards;
+      @media (max-width: 815px) {
+        display: none;
+      }
     }
     &:nth-child(3) {
       grid-column: 3 /4;
       grid-row: 1 / 2;
       animation: fade-in 1s 0.3s backwards;
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
     &:nth-child(4) {
       grid-column: 1 /2;
@@ -325,11 +364,17 @@ a {
       grid-column: 2 /3;
       grid-row: 4 / 7;
       animation: fade-in 1s 0.4s backwards;
+      @media (max-width: 815px) {
+        display: none;
+      }
     }
     &:nth-child(6) {
       grid-column: 3 /4;
       grid-row: 2 / 5;
       animation: fade-in 1s 0.5s backwards;
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
     &:nth-child(7) {
       grid-column: 1 /2;
@@ -340,6 +385,9 @@ a {
       grid-column: 3 /4;
       grid-row: 5 / 7;
       animation: fade-in 1s 0.7s backwards;
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
   }
   &__img {
@@ -387,10 +435,19 @@ a {
   grid-row: 3/4;
   display: flex;
   align-items: center;
+  @media (max-width: 815px) {
+    display: none;
+  }
 }
 .step {
   text-align: center;
   padding: 20px;
+  @media (max-width: 960px) {
+    &:nth-child(3) {
+      display: none;
+    }
+  }
+
   &__icon {
     font-size: 20px;
     height: 50px;
@@ -399,6 +456,7 @@ a {
     border-radius: 50%;
     background-color: #fff;
     margin-bottom: 17px;
+
     &--1 {
       color: #67b941;
     }
